# SimpliAtmos_py

./: LICENSE  analyse_profile.py  profile.out  pyproject.toml  run.py
config/: namelist.py
simpliatmos/core/: grid.py  poisson.py  time_integration.py
simpliatmos/io/: io.py
simpliatmos/model/: equations.py  initialisation.py  model.py  states.py  time.py
simpliatmos/physics/: resolve_forcing.py  thermal.py
simpliatmos/tools/: numerics.py  operators.py  weno.py
